# transformers-scratch

./: README.md  config.json  config.toml  dataset.ipynb  demo.ipynb  playground.ipynb  prepare.py  pyproject.toml  tokenizer.json  train.py  transformer.ipynb
config/: gpt2.toml  gpt2_large.toml  gpt2_nano.toml  vanilla.toml  vgg.toml
models/: __init__.py  _clip.py  _ffn.py  _gpt2.py  _utils.py  _vanilla_transformer.py  _vision_transformer.py  gpt2.py  utils.py  vanilla_transformer.py  vgg.py  vision_transformer.py
models/layers/: __init__.py  _attention.py  _attentions.py  _ffn.py  _pe.py  attention.py  pe.py
pipelines/: __init__.py  _utils.py  base.py  causal_language_modeling.py  config.py
pipelines/tasks/: causal_language_modeling.py  image_classification.py
utils/: __init__.py  _config.py  _dataloader.py  _dataset.py  _generate.py  _model.py  _optimizer.py  _tokenizer.py
