[project]
name = "transformers-scratch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dacite>=1.9.2",
    "datasets>=4.2.0",
    "jupyter>=1.1.1",
    "muon-optimizer>=0.1.0",
    "schedulefree>=1.4.1",
    "sentencepiece>=0.2.1",
    "tokenizers>=0.22.1",
    "torch==2.9.0",
    "torchvision>=0.23.0",
    "transformers>=4.57.0",
    "typer>=0.19.2",
    "wandb>=0.22.2",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
]
